// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project - Add Data - Filter Section should display the given title in the header 1`] = `
<pf-filter-section
  filter={[Function Object]}
  filterTypes={[Function Object]}
  reset={[Function EventEmitter]}
  searchClicked={[Function EventEmitter]}
  searchValueChanged={[Function EventEmitter]}
>
  <div
    class="filter"
  >
    <div
      class="header"
    >
      <div
        class="header-left"
      >
         Job Title/Code 
        
      </div>
      <div
        class="header-right"
      >
        
        <div
          class="reset-link"
        >
          
          
          
          Clear
        </div>
        
      </div>
    </div>
    
    <div>
      
      <div
        class="content"
      />
    </div>
  </div>
</pf-filter-section>
`;

exports[`Project - Add Data - Filter Section should display the transcluded content 1`] = `
<ng-component
  filter={[Function Object]}
>
  <pf-filter-section
    ng-reflect-filter="[object Object]"
  >
    <div
      class="filter"
    >
      <div
        class="header"
      >
        <div
          class="header-left"
        >
           Job Title/Code 
          
        </div>
        <div
          class="header-right"
        >
          
          <div
            class="reset-link"
          >
            
            
            
            Clear
          </div>
          
        </div>
      </div>
      
      <div>
        
        <div
          class="content"
        >
          <h1>
            Transclusion Works!
          </h1>
        </div>
      </div>
    </div>
  </pf-filter-section>
</ng-component>
`;

exports[`Project - Add Data - Filter Section should show a fa-angle-down icon in the header, when collapsed 1`] = `
<pf-filter-section
  collapsed={[Function Boolean]}
  filter={[Function Object]}
  filterTypes={[Function Object]}
  reset={[Function EventEmitter]}
  searchClicked={[Function EventEmitter]}
  searchValueChanged={[Function EventEmitter]}
>
  <div
    class="filter"
  >
    <div
      class="header"
    >
      <div
        class="header-left"
      >
         Job Title/Code 
        
        <div
          class="ml-2"
        >
          <i
            class="far fa-angle-down"
          />
        </div>
      </div>
      <div
        class="header-right"
      >
        
        <div
          class="reset-link"
        >
          
          
          
          Clear
        </div>
        
      </div>
    </div>
    
  </div>
</pf-filter-section>
`;
